--- a/src/main/resources/static/css/loginSignupStyles.css
+++ b/src/main/resources/static/css/loginSignupStyles.css
@@ -1,5 +1,8 @@
 @import url('./globalStyles.css');
 
+html{
+height:100%;
+}
 body {
     background-image: url('../assets/wallpaper1.jpg');
     background-repeat: no-repeat;
@@ -7,6 +10,10 @@ body {
     background-size: cover;
     /* capa sobre fondo */
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .6);
+    /*para dejar fijo el footer*/
+    display:flex;
+    flex-direction:column;
+    min-height:100%;
 
 }
 
@@ -160,4 +167,5 @@ form button:hover{
         transform: rotate(360deg);
     }
 }
+
 
