--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -60,8 +60,16 @@ th, td {
 /* typography */
 
 html {
+  height: 100%;
+
   font-family: 'helvetica neue', helvetica, arial, sans-serif;
 }
+body{
+  display:flex;
+  flex-direction:column;
+  min-height:100%;
+}
+
 
 thead th, tfoot th {
   font-family: 'Rock Salt', cursive;
@@ -175,6 +183,17 @@ table button.danger{
     width: 100%;
  }
 
+footer {
+  background-color: black;
 
-
+margin-top:auto;
+  width: 100%;
+  height: 40px;
+  color: white;
+  text-align:center;
+  padding:10px;
+}
+div.enlace-lista{
+    margin-left:50px;
+}
 
