--- a/src/main/resources/static/css/tasksStyles.css
+++ b/src/main/resources/static/css/tasksStyles.css
@@ -2,13 +2,13 @@
 
 
 body {
-    background-color: var(--gris);
+    background-color: var(--blanco);
     background-image: url('../assets/wallpaper3.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     /* capa sobre fondo */
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .8);
+   /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .8);*/
 
 }
 
@@ -231,6 +231,3 @@ footer {
     align-items: center;
 }
 
-footer img {
-    height: 100%;
-}
