--- a/src/main/resources/static/css/loginSignupStyles.css
+++ b/src/main/resources/static/css/loginSignupStyles.css
@@ -8,8 +8,6 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* capa sobre fondo */
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .6);
     /*para dejar fijo el footer*/
     display:flex;
     flex-direction:column;
@@ -17,36 +15,13 @@ body {
 
 }
 
-header {
-    background-color: var(--negro);
-    height: 5rem;
-    margin-bottom: 3rem;
-}
-
-nav {
-    padding: 1rem;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-nav h1 span {
-    font-weight: 300;
-    font-size: 1rem;
-    color: var(--amarelo);
-}
-nav img {
-    display: block;
-    height: 80%;
-}
 
 .container {
     padding: 0 5%;
 }
 
 form {
-    background-color: var(--negro);
+    background-color:  #28bfa5;
     max-width: 24rem;
     margin: 0 auto;
     padding: 2rem 3rem;
